	  switches.
	* backup-manager-upload (closes bug #195)
	  Don't set a port switch to ssh/scp commands if BM_UPLOAD_SSH_PORT is not
	  set. Thanks to Andy Shinn for the report and the diagnostic.
	* lib/backup-methods.sh (closes #194)
	  Change permission whenever an archive is made, ether if it's correctly
	  built or not.
	  Thansk to Philippe Villiers for the report.

2007-08-30	Alexis Sukrieh  <sukria@backup-manager.org>

	* lib/files.sh
	  Process symlinks as well for building the purging list.

2007-05-30  Alexis Sukrieh  <sukria@backup-manager.org>

	* Makefile, doc/Makefile
	  + Adding $(DESTDIR) where needed.
	  + Better call to pod2man: --section 8
	  + Fixes in doc/Makefile 

2007-05-29  Alexis Sukrieh  <sukria@backup-manager.org>

	* Fixed a typo in the user-guide (bug #167).

2007-05-29  Alexis Sukrieh <sukria@sukria.net>

	* Makefile
	  Adding the missing lib/dbus.sh line

2007-05-27  Rached Ben Mustapha  <rached@benmur.net>

	* lib/dbus.sh
	  + New module to signal state of backup-manager to listeners on D-BUS
	* lib/backup-methods.sh, lib/logger.sh, backup-manager
	  + Use progress reporting and logging facilities from lib/dbus.sh
	* t/testlib.sh
	  + Initialize dbus stuff so we know if it breaks things
	* doc/README.dbus
	  + some dbus support docs

2007-05-27  Alexis Sukrieh  <sukria@backup-manager.org>
	
	* Fixed all the tests scripts in t/
	* Fixed the lzma commandline so the tar.lz archives are built.

2007-04-24  Alexis Sukrieh  <sukria@backup-manager.org>

	* Release: 0.7.6

2007-03-13  Alexis Sukrieh  <sukria@backup-manager.org>

	* Support for a new variable that control whether BM should purge archives
	made by other instance of the one that is running (BM_ARCHIVE_STRICTPURGE)
	(closes: #153).

2007-02-20	Alexis Sukrieh	<sukria@backup-manager.org>

	* lib/backup-methods.sh
	  + change every call to external command so that we can read their return
	  code.
	  + new function check_error_code() to handle BM's behaviour according to